@@ -129,6 +129,7 @@
         <configuration>
           <path>/</path>
           <port>8080</port>
+          <extraJvmArguments>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</extraJvmArguments>
         </configuration>
       </plugin>
     </plugins>
